--- a/.github/workflows/build-dq-lib.yml
+++ b/.github/workflows/build-dq-lib.yml
@@ -17,11 +17,11 @@ jobs:
         pip install wheel        
     - name: Build Python Package
       run: |
-        python3 ./gedq/setup.py sdist bdist_wheel
-        python3 ./spark/setup.py sdist bdist_wheel
+        python3 $GITHUB_WORKSPACE/gedq/setup.py sdist bdist_wheel
+        python3 $GITHUB_WORKSPACE/spark/setup.py sdist bdist_wheel
         mkdir ./whlpkg
-        cp -r ./gedq/dist ./whlpkg
-        cp -r ./spark/dist/ ./whlpkg        
+        cp -r $GITHUB_WORKSPACE/gedq/dist ./whlpkg
+        cp -r $GITHUB_WORKSPACE/spark/dist/ ./whlpkg        
     - name: Temporarily save Whl Package
       uses: actions/upload-artifact@v4
       with:
