--- a/.github/workflows/deploy-datapipeline-config.yml
+++ b/.github/workflows/deploy-datapipeline-config.yml
@@ -7,5 +7,4 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: deploy to minio
-        run: | 
-          mc cp --recursive $GITHUB_WORKSPACE/config mino/wba
+        run: mc cp --recursive $GITHUB_WORKSPACE/config minio/wba
