--- a/.github/workflows/deploy-datapipeline-config.yml
+++ b/.github/workflows/deploy-datapipeline-config.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v1
-
       - name: deploy to minio
-        run: mc cp --recursive $GITHUB_WORKSPACE/config minio/wba
+        run: mc admin info minio 
+          # mc cp --recursive $GITHUB_WORKSPACE/config minio/wba
