--- a/.github/workflows/deploy-etl-scripts.yml
+++ b/.github/workflows/deploy-etl-scripts.yml
@@ -9,6 +9,7 @@ jobs:
  
     - name: Copy ETL to Spark Cluster 
       run: |
+        docker cp ./scripts/. airflow-spark-spark-1:/opt/bitnami/spark/dev/scripts
         docker cp ./scripts/. airflow-spark-spark-worker-1:/opt/bitnami/spark/dev/scripts
         docker cp ./scripts/. airflow-spark-spark-worker-2:/opt/bitnami/spark/dev/scripts
         docker cp ./scripts/. airflow-spark-spark-worker-3:/opt/bitnami/spark/dev/scripts
