--- a/.github/workflows/build-dq-lib.yml
+++ b/.github/workflows/build-dq-lib.yml
@@ -17,8 +17,8 @@ jobs:
         pip install wheel        
     - name: Build Python Package
       run: |
-        python3 $GITHUB_WORKSPACE/gedq/setup.py sdist bdist_egg
-        python3 $GITHUB_WORKSPACE/spark/setup.py sdist bdist_egg
+        python3 $GITHUB_WORKSPACE/gedq/setup.py sdist bdist_wheel
+        python3 $GITHUB_WORKSPACE/spark/setup.py sdist bdist_wheel
         mkdir ./whlpkg
         cp -r $GITHUB_WORKSPACE/dist ./whlpkg
         cp -r $GITHUB_WORKSPACE/dist/ ./whlpkg        
