--- a/.github/workflows/build-dq-lib.yml
+++ b/.github/workflows/build-dq-lib.yml
@@ -17,10 +17,8 @@ jobs:
         pip install wheel        
     - name: Build Python Package
       run: |
-        python3 $GITHUB_WORKSPACE/gedq/setup.py sdist bdist_wheel
         python3 $GITHUB_WORKSPACE/spark/setup.py sdist bdist_wheel
         mkdir ./whlpkg
-        cp -r $GITHUB_WORKSPACE/dist ./whlpkg
         cp -r $GITHUB_WORKSPACE/dist/ ./whlpkg        
     - name: Temporarily save Whl Package
       uses: actions/upload-artifact@v4
@@ -56,11 +54,8 @@ jobs:
         docker cp ./whlpkg/. airflow-spark-spark-worker-3:/opt/bitnami/spark
     - name: Install Whls to Spark Cluster 
       run: |
-        docker exec --user root airflow-spark-spark-1 pip install /opt/bitnami/spark/dist/gedq-0.1-py3-none-any.whl
-        docker exec --user root airflow-spark-spark-1 pip install /opt/bitnami/spark/dist/lakehouse-0.1-py3-none-any.whl     
-        docker exec --user root airflow-spark-spark-worker-1 pip install /opt/bitnami/spark/dist/gedq-0.1-py3-none-any.whl
-        docker exec --user root airflow-spark-spark-worker-1 pip install /opt/bitnami/spark/dist/lakehouse-0.1-py3-none-any.whl     
-        docker exec --user root airflow-spark-spark-worker-2 pip install /opt/bitnami/spark/dist/gedq-0.1-py3-none-any.whl
-        docker exec --user root airflow-spark-spark-worker-2 pip install /opt/bitnami/spark/dist/lakehouse-0.1-py3-none-any.whl     
-        docker exec --user root airflow-spark-spark-worker-3 pip install /opt/bitnami/spark/dist/gedq-0.1-py3-none-any.whl
-        docker exec --user root airflow-spark-spark-worker-3 pip install /opt/bitnami/spark/dist/lakehouse-0.1-py3-none-any.whl     
+        
+        docker exec --user root airflow-spark-spark-1 python3 -m pip install /opt/bitnami/spark/dist/lakehouse-0.1-py3-none-any.whl     
+        docker exec --user root airflow-spark-spark-worker-1 python3 -m pip install /opt/bitnami/spark/dist/lakehouse-0.1-py3-none-any.whl     
+        docker exec --user root airflow-spark-spark-worker-2 python3 -m pip install /opt/bitnami/spark/dist/lakehouse-0.1-py3-none-any.whl     
+        docker exec --user root airflow-spark-spark-worker-3 python3 -m pip install /opt/bitnami/spark/dist/lakehouse-0.1-py3-none-any.whl     
