--- a/.github/workflows/build-lakehouse-lib.yml
+++ b/.github/workflows/build-lakehouse-lib.yml
@@ -5,11 +5,11 @@ jobs:
   whl-builder:
     runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
+    # - uses: actions/checkout@v1
+    # - name: Set up Python 3.8
+    #   uses: actions/setup-python@v1
+    #   with:
+    #     python-version: 3.8
     - name: Install Requirements
       run: |
         python3 -m pip install --upgrade pip
