--- a/.github/workflows/build-lakehouse-lib.yml
+++ b/.github/workflows/build-lakehouse-lib.yml
@@ -13,8 +13,8 @@ jobs:
     - name: Install Requirements
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools
-        pip install wheel        
+        python -m pip install setuptools
+        python -m pip install wheel        
     - name: Build Python Package
       run: |
         python ./spark/setup.py sdist bdist_wheel
