--- a/.github/workflows/build-lakehouse-lib.yml
+++ b/.github/workflows/build-lakehouse-lib.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         python3.8 $GITHUB_WORKSPACE/spark/setup.py sdist bdist_wheel
         mkdir ./whlpkg
-        cp -r ./dist/ ./whlpkg        
+        cp -r $GITHUB_WORKSPACE/dist/ ./whlpkg        
     - name: Temporarily save Whl Package
       uses: actions/upload-artifact@v4
       with:
